# agent-assignment

./: .env.example  README.md  launch_web.bat  launch_web.ps1  main.py  pyproject.toml
scripts/: test_clarify.py
src/: agent.py  desktop_app.py  tools.py  webserver.py
src/agent/: core.py  orchestrator.py
tests/: test_agent.py  test_tools.py
